[package]
name = "galaxy"
version = "0.0.4-alpha"
edition = "2021"

[build-dependencies]
protobuf-codegen = "3.4.0"

[workspace]
members = [
    "shared",
    "network_service",
    "transaction_service",
    "storage_service",
    "block_service",
    "consensus_service",
    "overlay_service",
    "validation_service",
    "mining_service",
    "auth_service",
    "alert_service",
    "index_service",
]
resolver = "2"

[workspace.dependencies]
protobuf = "3.4.0"
prometheus = "0.14.0"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
protobuf-codegen = "3.4.0"
async-stream = "0.3.6"
tigerbeetle-unofficial = "0.13.1"
sled = "0.34.7"
jsonwebtoken = "9.3.0"
governor = "0.10.0"
async-channel = "2.3.1"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
