[package]
name = "alert_service"
version = "0.0.4"
edition = "2021"

[lib]
name = "alert_service"
path = "src/lib.rs"

[[bin]]
name = "alert_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }

[build-dependencies]
tonic-build = { workspace = true }
