[package]
name = "alert_service"
version = "0.0.4-alpha"
edition = "2021"

[[bin]]
name = "alert_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
protobuf = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
async-stream = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
