[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
jsonwebtoken = "8.3" # For JWT handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.8"
