[package]
name = "auth_service"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "auth_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prometheus = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
