[package]
name = "auth_service"
version = "0.0.4"
edition = "2021"

[lib]
name = "auth_service"
path = "src/lib.rs"

[[bin]]
name = "auth_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prometheus = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
shared = { path = "../shared" }

[build-dependencies]
tonic-build = { workspace = true }
