[package]
name = "block_service"
version = "0.0.4-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "block_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
protobug = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
async-channel = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
