[package]
name = "index_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
sled = "0.34"
prometheus = "0.13"
tracing = "0.1"
hex = "0.4"
sv = { git = "https://github.com/bitcoin-sv/rust-sv" }
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.8"
