[package]
name = "index_service"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "index_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prometheus = { workspace = true }
sled = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
sv = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
