[package]
name = "merchant_service"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "merchant_service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
prometheus = { workspace = true }
sv = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
jsonwebtoken = { workspace = true }
sled = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
serde_json = "1"
lazy_static = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-retry = "0.3"
dashmap = "6"

[dev-dependencies]
tokio-test = "0.4"
