[package]
name = "mining_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mining_service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
prometheus = { workspace = true }
sv = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
tigerbeetle-unofficial = { workspace = true }
sled = { workspace = true }
jsonwebtoken = { workspace = true }
governor = { workspace = true }
async-channel = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
