[package]
name = "network_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime and networking
tonic = "0.8"                                  # gRPC support
prost = "0.11"                                 # Protocol Buffers
rust-sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" } # BSV-specific library
hex = "0.4"                                    # Hex decoding
async-std = "1.12"                             # Async utilities
futures = "0.3"                                # Stream handling
shared = { path = "../shared" }                # Link to shared crate
transaction_service = { path = "../transaction_service" } # Link to transaction_service

[build-dependencies]
tonic-build = "0.8"                            # For compiling .proto files
