[package]
name = "network_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
rust-sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" }
hex = "0.4"
async-std = "1.12"
futures = "0.3"
toml = "0.8"                                  # Config parsing
shared = { path = "../shared" }
transaction_service = { path = "../transaction_service" }
block_service = { path = "../block_service" }

[build-dependencies]
tonic-build = "0.8"
