[package]
name = "network_service"
version = "0.0.4-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
async-channel = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
tonic-build = { workspace = true }
