[package]
name = "overlay_service"
version = "0.0.4-alpha"
edition = "2021"

[[bin]]
name = "overlay_service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tonic = { workspace = true }
prost = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
tigerbeetle-unofficial = { workspace = true }
sled = { workspace = true }
jsonwebtoken = { workspace = true }
governor = { workspace = true }
async-channel = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
