[package]
name = "shared"
version = "0.0.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13.3"
prometheus = { workspace = true }
sv = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
