[package]
name = "storage_service"
version = "0.0.4-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "storage_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
protobuf = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
tokio = { workspace = true }
tigerbeetle-unofficial = { workspace = true }
sled = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
