[package]
name = "torrent_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tracing = "0.1.40"
toml = "0.8.19"
chrono = "0.4.38"  # For time-based aging
bip_metainfo = "0.5.0"  # Torrent file generation
torrust-tracker = "3.0.0"  # Tracker (adjust version if needed; latest as of 2025)
cratetorrent = "0.6.0"  # Async torrent engine
bsv = "0.3.0"  # For micropayments; if not exact, use compatible
thiserror = "1.0.63"  # Error handling
governor = "0.10.0"  # Rate limiting, matching Galaxy
prometheus = "0.14.0"  # Metrics, matching Galaxy
hex = "0.4.3"
async-channel = "2.3.1"

[build-dependencies]
# Empty for now
