[package]
name = "torrent_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tracing = "0.1.40"
toml = "0.8.19"
chrono = "0.4.38"
bip_metainfo = "0.5.0"
torrust-tracker = "3.0.0"
cratetorrent = "0.6.0"
thiserror = "1.0.63"
governor = "0.10.0"
prometheus = "0.14.0"
hex = "0.4.3"
async-channel = "2.3.1"

[build-dependencies]
# Empty for now
