[package]
name = "transaction_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
tonic = "0.8"                                  # gRPC support
prost = "0.11"                                 # Protocol Buffers
rust-sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.0" } # BSV-specific library
hex = "0.4"                                    # Hex decoding
async-channel = "2.3"                          # Async transaction queuing
shared = { path = "../shared" }                # Link to shared crate
storage_service = { path = "../storage_service" } # For UTXO validation
consensus_service = { path = "../consensus_service" } # For consensus validation

[build-dependencies]
tonic-build = "0.8"                            # For compiling .proto files
