[package]
name = "transaction_service"
version = "0.0.4-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "transaction_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
protobuf = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
tonic-build = { workspace = true }
