[package]
name = "validation_service"
version = "0.0.4-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "validation_service"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
sv = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
async-stream = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
